<resources>
    <string name="app_name">Agora</string>
    <string name="edit_message">Entrer un message</string>
    <string name="button_send">Envoyer</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="logout">Déconnexion</string>
    <string name="registerHere">S\'inscrire</string>
    <string name="forgotPassword">Mot de passe oublié</string>
    <string name="email">Email</string>
    <string name="confirmation">Confirmation</string>
    <string name="register">Inscription</string>
    <string name="title_activity_register">Inscription</string>
    <string name="title_activity_project_list">Liste des projets</string>
    <string name="title_activity_project">Projet</string>
    <string name="title_activity_user_list">Liste des utilisateurs</string>
    <string name="title_activity_profil">Profile</string>
    <string name="join_project">Rejoindre ce projet</string>
    <string name="ask_project">Proposer un projet</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="update">Mettre à jour</string>
    <string name="phone">Téléphone</string>
    <string name="location">Location</string>
    <string name="contact_him">Contact</string>
    <string name="description">Description</string>
    <string name="no">non</string>
    <string name="yes">oui</string>
    <string name="ok">OK</string>
    <string name="category">Catégorie</string>
    <string name="select_picture">Choissisez une image</string>
    <string name="success">Succès</string>
    <string name="error">Erreur</string>
    <string name="task_added">La tâche a été ajoutée avec succès.</string>
    <string name="accepted_cap">ACCEPTÉ</string>
    <string name="refused_cap">REFUSÉ</string>
    <string name="person">personne</string>
    <string name="person_plu">personnes</string>
    <string name="remaining_day">jour restant</string>
    <string name="remaining_day_plu">jours restants</string>
    <string name="cancel">Annuler</string>
    <string name="send">Envoyer</string>
    <string name="fill_all_fields">Veuillez remplir tous les champs.</string>
    <string name="success_add_diploma">Succès de l\'ajout du diplôme.</string>
    <string name="success_add_experience">Succès de l\'ajout du l\'expérience.</string>
    <string name="fail_add_diploma">Echec de l\'ajout du diplôme, veuillez réessayer.</string>
    <string name="project_creation">Création de projet</string>
    <string name="image_too_heavy">Votre image est trop lourde</string>
    <string name="pick_image">Veuillez sélectionner une image pour valider le projet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="fill_email">Renseignez votre adresse e-mail pour réinitialiser votre mot de passe.</string>
    <string name="fill_firstname">Veullez remplir votre prenom.</string>
    <string name="fill_lastname">Veullez remplir votre nom.</string>
    <string name="fill_place">Veullez remplir votre emplacement.</string>
    <string name="update_2">Mise à jour.</string>
    <string name="success_account_update">Succès de la mise à jour de votre compte.</string>
    <string name="error_account_update">Erreur de la mise à jour de votre compte.</string>
    <string name="success_send_message">Succès de l\'envoi de votre message.</string>
    <string name="error_accept_cgu">Vous devez accepter les conditions générales d\'utilisation.</string>
    <string name="new_diploma">Nouveau diplôme</string>
    <string name="new_experience">Nouvelle expérience</string>
    <string name="diploma">Diplôme</string>
    <string name="place_school">Lieu / École</string>
    <string name="place_company">Lieu / Entreprise</string>
    <string name="start_date">Date de début</string>
    <string name="end_date">Date de fin</string>
    <string name="place">Poste</string>
    <string name="my_askings">Mes demandes</string>
    <string name="cgu">Conditions générales d\'utilisation</string>
    <string name="configuration">Configuration</string>
    <string name="my_profil">Mon profil</string>
    <string name="my_invitations">Mes invitations</string>
    <string name="step_1_on_3">Etape 1 sur 3</string>
    <string name="step_2_on_3">Etape 2 sur 3</string>
    <string name="step_3_on_3">Etape 3 sur 3</string>
    <string name="informations">Informations</string>
    <string name="informations_help">Elles permettent de définir le cadre de votre projet</string>
    <string name="project_name">Nom du projet</string>
    <string name="short_description">Briève description</string>
    <string name="short_description_help">Elle apparaitra sur la liste des projets</string>
    <string name="next">Suivant</string>
    <string name="details">Détails</string>
    <string name="details_help">Ils permettent à vos futurs collaborateurs d\'avoir le contexte du projet.</string>
    <string name="number_person_to_find">NOMBRE DE PERSONNES RECHERCHÉES</string>
    <string name="project_tag">Tags du projet</string>
    <string name="project_tag_help">Veuillez séparer les tags par une virgule</string>
    <string name="project_city">Précisez la ville où se déroule le projet</string>
    <string name="theorical_end_date">Date de fin estimée</string>
    <string name="image">Image</string>
    <string name="image_help">Une image permet de donner un aperçu du projet que vous souhaitez réaliser.</string>
    <string name="load_image">Charger une image</string>
    <string name="save">Enregistrer</string>
    <string name="email_adress">Adresse email</string>
    <string name="doesnt_have_account">Vous n\'avez pas de compte Agora ? </string>
    <string name="my_projects">Mes projets</string>
    <string name="do_not_belong_to_any_project">Vous ne faites parti d\'aucun projet.</string>
    <string name="experience">Expérience</string>
    <string name="education">Éducation</string>
    <string name="link_linkedin">Lien Linkedin</string>
    <string name="link_github">Lien Github</string>
    <string name="link_twitter">Lien Twitter</string>
    <string name="skills">Compétences</string>
    <string name="add_experience">+ Ajouter une expérience</string>
    <string name="add_diploma">+ Ajouter un diplôme</string>
    <string name="by">par </string>
    <string name="tech">Technologie</string>
    <string name="collaborators">Collaborateurs</string>
    <string name="note_list">Liste des notes</string>
    <string name="ask_join_project">Demander à rejoindre le projet</string>
    <string name="enter_message">Entrez votre message</string>
    <string name="results">Résultats</string>
    <string name="search_project">Recherche de projets</string>
    <string name="which_skills">Quelles compétences ?</string>
    <string name="where">Où ?</string>
    <string name="spaced_by_comma">Séparé par des virgules</string>
    <string name="search">Rechercher</string>
    <string name="enter_firstname">Entrez votre prénom</string>
    <string name="enter_lastname">Entrez votre nom</string>
    <string name="enter_email">Entrez votre adresse mail</string>
    <string name="enter_password">Entrez votre mot de passe</string>
    <string name="confirm_password">Confirmez votre mot de passe</string>
    <string name="i_accept_the">J\'accepte les </string>
    <string name="already_have_account">Déjà un compte ? </string>
    <string name="cgu_short">CGU</string>
    <string name="connect">Se connecter</string>
    <string name="new_todo">Nouvelle tâche</string>
    <string name="task_name">Nom de la tâche</string>
    <string name="search_collaborators">Recherche de collaborateurs</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
