<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExperienceActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/new_experience"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/position_input"
            android:hint="@string/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/place_input"
            android:hint="@string/place_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/start_input"
            android:hint="@string/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/end_input"
            android:hint="@string/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_back"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:id="@+id/description_input"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/baseline_save_black_24"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</android.support.constraint.ConstraintLayout>