<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:fontFamily="@font/lato_bold"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/configuration"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/my_profil"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <View
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/invitation_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/my_invitations"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <View
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <TextView
            android:id="@+id/asking_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/my_askings"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <View
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/cgu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/cgu"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <View
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/logout"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <View
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>